--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "three": "^0.170.0"
+  },
   "devDependencies": {
+    "@types/three": "^0.170.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   }
