--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,11 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./src:/app:cached
-      - /app/node_modules
+      - ./src/src:/app/src:cached
+      - ./src/public:/app/public:cached
+      - ./src/index.html:/app/index.html:cached
+      - ./src/vite.config.js:/app/vite.config.js:cached
+      - ./src/tsconfig.json:/app/tsconfig.json:cached
     environment:
       - CHOKIDAR_USEPOLLING=true
     command: pnpm run dev
